--- a/app/src/main/res/layout/speech_fragment.xml
+++ b/app/src/main/res/layout/speech_fragment.xml
@@ -42,7 +42,7 @@
 
         </LinearLayout>
 
-        <include layout="@layout/divider"></include>
+        <include layout="@layout/divider"/>
 
         <TextView
             style="@style/SubTitle"
@@ -63,6 +63,7 @@
                 />
 
             <Button
+                android:layout_marginTop="10dp"
                 android:id="@+id/RemoveSpeech"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
@@ -70,6 +71,7 @@
                 android:background="@drawable/trash_state" />
 
             <Button
+                android:layout_marginTop="10dp"
                 android:id="@+id/SpeakButton2"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
@@ -77,7 +79,7 @@
                 android:background="@drawable/speak_state" />
         </LinearLayout>
 
-        <include layout="@layout/divider"></include>
+        <include layout="@layout/divider"/>
 
         <TextView
             style="@style/SubTitle"
