--- a/app/src/main/res/layout/walk_fragment.xml
+++ b/app/src/main/res/layout/walk_fragment.xml
@@ -5,14 +5,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center">
 
         <ImageView
             android:id="@+id/image"
             android:layout_width="328dp"
             android:layout_height="328dp"
-            android:background="@color/Text"/>
+            android:background="@color/Text"
+            android:layout_gravity="center"/>
 
     </LinearLayout>
 
